--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -24,6 +24,7 @@
                     <li><a href="index.html">Hjem</a></li>
                     <li><a href="#popprodukter">Produkter</a></li> 
                     <li><a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a></li>
+                    <!--Image by <a href="https://pixabay.com/users/mickeylit-611797/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8249560">Mickey Mikolauskas</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8249560">Pixabay</a>-->
                     <li><a href="#popkategorier">kategorier</a></li> 
                     <li><a href="#contact">kontakt oss</a></li>
                     <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
@@ -55,7 +56,8 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear"> 
+                    <!--Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Pixabay</a>-->
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
@@ -165,7 +167,7 @@
            
            <section class="annmeldelser">
             <article class="review">
-                <img src="img/profile-cat.jpg" alt="profilbilde av katt">
+                <img src="img/profile-cat.jpg" alt="profilbilde av katt"><!--Image by <a href="https://pixabay.com/users/jaclou-dl-5602247/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8578562">JackieLou DL</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8578562">Pixabay</a>-->
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
