--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- linker til font awsome sine ikoner osv LA IKON MAPPA VÆRE-->
     <link href="ikoner/css/fontawesome.css" rel="stylesheet">
     <link href="ikoner/css/brands.css" rel="stylesheet">
     <link href="ikoner/css/solid.css" rel="stylesheet">
@@ -15,16 +14,16 @@
     <div id="grid-container">
         <header>
             <nav>
-                <form> <!--gjør om label til hidden, så skjermoppleser kan lese det-->
+                <form> 
                     <label for="search">Søk</label>
                     <input type="search" placeholder="Søk her" id="search">
                     <input type="submit" value="Søk">
                 </form>
                 <ul>
                     <li><a href="index.html">Hjem</a></li>
-                    <li><a href="index.html#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
-                    <li><a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a></li>
-                    <li><a href="index.html#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
+                    <li><a href="index.html#popprodukter">Produkter</a></li>
+                    <li><a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a></li><!--Image by <a href="https://pixabay.com/users/mickeylit-611797/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8249560">Mickey Mikolauskas</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8249560">Pixabay</a>-->
+                    <li><a href="index.html#popkategorier">kategorier</a></li>
                     <li><a href="#contact">kontakt oss</a></li>
                     <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
                     <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
@@ -43,18 +42,18 @@
         <section class="produkt-sammendrag">
             <section class="product-container">
                 <article id="bigpic">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks"><!--Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Pixabay</a>-->
                 </article>
 
                 <article>
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </article>
 
                 <article>
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </article>
                 <article>
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </article>
             </section>
             <section class="produktinfo">
@@ -64,9 +63,8 @@
                 <p>farge: Gul/blå</p>
                 <form>
                     <label>
-                        <select required> 
-                            <!-- Drop-down meny for å velge land, hvor det er påkrevd å velge noe -->
-                            <option value="">Velg en størelse</option> <!-- Placeholder-valg -->
+                        <select required>
+                            <option value="">Velg en størelse</option>
                             <option value="36">36</option> 
                             <option value="37">37</option> 
                             <option value="38">38</option> 
@@ -89,7 +87,7 @@
             <p><a href="#">Flere liknende produkter <i class="fa-solid fa-arrow-right"></i></a></p>
             <aside>
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko"><!--Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5418991">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5418991">Pixabay</a>-->
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -98,7 +96,7 @@
                 </article>  
 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -107,7 +105,7 @@
                 </article>  
 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -116,7 +114,7 @@
                 </article>  
 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -125,7 +123,7 @@
                 </article>  
 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -134,7 +132,7 @@
                 </article> 
 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -143,7 +141,7 @@
                 </article> 
 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
@@ -152,7 +150,7 @@
                 </article> 
                 
                 <article class="products">
-                    <img src="img/løpesko-category.jpg" alt="">
+                    <img src="img/løpesko-category.jpg" alt="hvite og sorte adidas sko">
                     <p>Adidas fly</p>
                     <p><a href="#">ADIDAS</a></p>
                     <p>pris: 899kr</p>
