endret alt text

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -37,7 +37,7 @@
                 <h3>1. Handlevogn</h3>
 
                 <article>
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-"> <!--Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Pixabay</a>-->
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks"> <!--Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Pixabay</a>-->
                 <section>
                     <h3>Nike Dunks</h3>
                     <p>kr 1299</p>
@@ -68,7 +68,7 @@
                 </article>
 
                 <article>
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 <section>
                     <h3>Nike Dunks</h3>
                     <p>kr 1299</p>
@@ -99,7 +99,7 @@
                 </article>
 
                 <article>
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 <section>
                     <h3>Nike Dunks</h3>
                     <p>kr 1299</p>
