--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- linker til font awsome sine ikoner osv LA IKON MAPPA VÆRE-->
     <link href="ikoner/css/fontawesome.css" rel="stylesheet">
     <link href="ikoner/css/brands.css" rel="stylesheet">
     <link href="ikoner/css/solid.css" rel="stylesheet">
@@ -56,7 +55,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear"> 
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks"> 
                     <!--Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5644799">Pixabay</a>-->
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
@@ -69,7 +68,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
@@ -81,7 +80,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
@@ -93,7 +92,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
@@ -105,7 +104,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
@@ -117,7 +116,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
@@ -129,7 +128,7 @@
                 <picture>
                     <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                    <img src="img/nike-dunks-1280.jpg" alt="gule og blå nike dunks">
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
