endret tittler og lagt til psuedoklasse

--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -8,7 +8,7 @@
     <link href="ikoner/css/solid.css" rel="stylesheet">
     <link href="ikoner/css/regular.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Nike-Dunk</title>
 </head>
 <body>
     <div id="grid-container">
