--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -8,7 +8,7 @@
     <link href="ikoner/css/solid.css" rel="stylesheet">
     <link href="ikoner/css/regular.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Kasse</title>
 </head>
 <body>
     <div id="grid-container">
