--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -166,7 +166,8 @@
            
            <section class="annmeldelser">
             <article class="review">
-                <img src="img/profile-cat.jpg" alt="profilbilde av katt"><!--Image by <a href="https://pixabay.com/users/jaclou-dl-5602247/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8578562">JackieLou DL</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8578562">Pixabay</a>-->
+                <img src="img/profile-cat.jpg" alt="profilbilde av katt">
+                <!--Image by <a href="https://pixabay.com/users/jaclou-dl-5602247/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8578562">JackieLou DL</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8578562">Pixabay</a>-->
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
