gjort klart til tilgjengelighetserklæring

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -262,7 +262,8 @@
                         <li><a href="#contact">Kontakt oss</a></li>
                     </ul>
                 </nav>
-            </section>   
+            </section> 
+            <p><a href="#">Tilgjengelighetserklæring</a></p>  
             <section id="some">
                 <h4>Sosiale medier</h4>
                 <ul>
