--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -259,7 +259,8 @@
                         <li><a href="#contact">Kontakt oss</a></li>
                     </ul>
                 </nav>
-            </section>   
+            </section>  
+            <p><a href="#">Tilgjengelighetserklæring</a></p> 
             <section id="some">
                 <h4>Sosiale medier</h4>
                 <ul>
