lagt inn tilgjengelighetserklæring

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -263,7 +263,7 @@
                     </ul>
                 </nav>
             </section> 
-            <p><a href="#">Tilgjengelighetserklæring</a></p>  
+            <p><a href="pdf/tilgjengelighetserklearing.pdf" target="_blank">Tilgjengelighetserklæring</a></p>  
             <section id="some">
                 <h4>Sosiale medier</h4>
                 <ul>
